[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brunch = "0.3.6"
itertools = "0.10.5"

[[bench]]
name = "bench08"
harness = false

[[bench]]
name = "bench09"
harness = false

[[bench]]
name = "bench10"
harness = false

[[bench]]
name = "bench11"
harness = false

[[bench]]
name = "bench12"
harness = false


[[bench]]
name = "bench13"
harness = false

[dev-dependencies]
test-case = "2.2.2"
