[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"

[dev-dependencies]
brunch = "0.3.6"
test-case = "2.2.2"

[[bench]]
name = "bench08"
harness = false

[[bench]]
name = "bench09"
harness = false

[[bench]]
name = "bench10"
harness = false

[[bench]]
name = "bench11"
harness = false

[[bench]]
name = "bench12"
harness = false


[[bench]]
name = "bench13"
harness = false

